log
Thu 28 Mar 2024 09:31:34 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1a13b5e
Thu 28 Mar 2024 09:37:43 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0e30da6
Thu 28 Mar 2024 09:42:52 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eb88219
Thu 28 Mar 2024 09:45:06 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4413eae
Thu 28 Mar 2024 09:58:59 PM UTC: 
 list.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
7e42d71
Thu 28 Mar 2024 09:59:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
92d4633
Thu 28 Mar 2024 10:00:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f179b7d
Thu 28 Mar 2024 10:01:28 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
b9ffa11
Thu 28 Mar 2024 10:04:35 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 15/70
523af0d
Thu 28 Mar 2024 10:07:55 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
43789dc
Thu 28 Mar 2024 10:10:56 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
c3ebaae
Thu 28 Mar 2024 10:15:34 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
6308170
Thu 28 Mar 2024 10:16:29 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
96157a7
Thu 28 Mar 2024 10:21:27 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
22c876e
Thu 28 Mar 2024 10:22:28 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
5890492
Thu 28 Mar 2024 10:29:48 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
1976d1e
Thu 28 Mar 2024 10:30:57 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
3e90ec3
